re PR middle-end/22043 (Fields not initialized for automatic structs with flexible array members)

PR tree-optimization/22043
	* gimplify.c (gimplify_init_constructor): If num_type_elements < 0
	for a constant-sized object, set cleared as well.

	* gcc.c-torture/execute/20050613-1.c: New test.

From-SVN: r100943